// Copyright 2019 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.api.envoy.http.backend_routing;

import "validate/validate.proto";

message BackendRoutingRule {
  // Operation name, also known as selector.
  string operation = 1 [(validate.rules).string.min_bytes = 1];

  // True if CONSTANT_ADDRESS, otherwise is APPEND_PATH_TO_ADDRESS.
  // https://cloud.google.com/endpoints/docs/openapi/openapi-extensions#understanding_path_translation
  bool is_const_address = 2;

  // Prefix used when re-writing the path for the backend.
  // Example for CONSTANT_ADDRESS:
  //     https://us-central1-my-project-id.cloudfunctions.net/helloGET
  // Example for APPEND_PATH_TO_ADDRESS:
  //     https://my-project-id.appspot.com
  string path_prefix = 3 [(validate.rules).string = {
    well_known_regex: HTTP_HEADER_VALUE,
    strict: false
  }];
}

message FilterConfig {
  // A list of backend routing rules for those selectors which needs path
  // translation.
  repeated BackendRoutingRule rules = 1;
}